[gd_scene load_steps=7 format=2]

[ext_resource path="res://player1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Font/Kalam-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Buttons/AgainButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Buttons/ExitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://End_scene.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_color = Color( 0.964706, 0.917647, 0.917647, 1 )
font_data = ExtResource( 2 )

[node name="End_Scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 9.34387
margin_top = 2.66968
margin_right = 1034.34
margin_bottom = 611.67
rect_pivot_offset = Vector2( 296.035, 406.271 )
color = Color( 0.0431373, 0.4, 0.572549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player1" parent="." instance=ExtResource( 1 )]
position = Vector2( 154.243, 432.112 )

[node name="Label" type="Label" parent="."]
margin_left = 37.9729
margin_top = 119.986
margin_right = 274.973
margin_bottom = 280.986
custom_fonts/font = SubResource( 1 )
text = "Score"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score1" type="Label" parent="."]
margin_left = 40.6425
margin_top = 193.403
margin_right = 277.643
margin_bottom = 354.403
custom_fonts/font = SubResource( 1 )
text = "Score"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgainButton" parent="." instance=ExtResource( 3 )]
margin_left = 389.473
margin_top = 279.461
margin_right = 589.473
margin_bottom = 379.461

[node name="EndButton" parent="." instance=ExtResource( 4 )]
margin_left = 390.808
margin_top = 424.958
margin_right = 590.808
margin_bottom = 524.958
rect_min_size = Vector2( 200, 100 )
[connection signal="pressed" from="AgainButton" to="." method="_on_AgainButton_pressed"]
[connection signal="pressed" from="EndButton" to="." method="_on_EndButton_pressed"]
